My website. Initial version.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-$text-color: #46433A;
+$text-color: #C5C8C6;
 $anchor-text-color: #CE534D;
-$background-color: #F1EED9;
+$background-color: #282A2E;
 
 body {
 	font-family: 'Vollkorn', serif;
