--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,24 +1,34 @@
-<h2>About Compass</h2>
-<p>Compass has been designed with something very specific in mind: to be a simple and elegant personal landing page.</p>
-
-<h2>Features</h2>
+<h2>I am...</h2>
+<p>A software developer passionate about modern technologies and standards. I proudly work at <a href="https://koombea.com">Koombea</a>. I'm a cat-loving engineer and have many hobbies.</p>
+<h2>I like...</h2>
 <ul>
-  <li>Responsive design</li>
-  <li>Mobile friendly</li>
-  <li>Easy deployment to <a href="https://pages.github.com/">GitHub Pages</a></li>
+  <li>Drones (I like to build them)</li>
+  <li>DIY Electronics</li>
+  <li>Fixing stuff with software</li>
+  <li>Gaming</li>
+  <li>Engineering</li>
+  <li>Sporty Cars</li>
 </ul>
 
-<p>For more information, including setup and configuration instructions, bug reports or feature requests head over to <a href="https://github.com/excentris/compass">GitHub</a>.</p>
+<p>Feel free to reach out:</p>
 
 <hr />
 
 <ul class="fa-ul main-list">
   <li class="main-list-item">
     <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/excentris/compass">GitHub Repository</a>
+    <a href="https://github.com/excentris/compass">Software Development</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-user fa-lg main-list-item-icon"></span>
-    <a href="http://excentris.net">The Author</a>
+    <a href="http://excentris.net">3D Printing</a>
+  </li>
+  <li class="main-list-item">
+    <span class="fa fa-reddit fa-lg main-list-item-icon"></span>
+    <a href="https://www.reddit.com/user/jfgomez86">Reddit</a>
+  </li>
+  <li class="main-list-item">
+    <span class="fa fa-building fa-lg main-list-item-icon"></span>
+    <a href="https://koombea.com">My Workplace</a>
   </li>
 </ul>
