--- a/_includes/content.html
+++ b/_includes/content.html
@@ -20,7 +20,7 @@
     <a href="https://github.com/jfgomez86">Software Development</a>
   </li>
   <li class="main-list-item">
-    <span class="fa fa-user fa-lg main-list-item-icon"></span>
+    <span class="fa fa-cube fa-lg main-list-item-icon"></span>
     <a href="https://www.thingiverse.com/jfgomez86">3D Printing</a>
   </li>
   <li class="main-list-item">
