--- a/_includes/content.html
+++ b/_includes/content.html
@@ -28,6 +28,10 @@
     <a href="https://www.reddit.com/user/jfgomez86">Reddit</a>
   </li>
   <li class="main-list-item">
+    <span class="fa fa-twitter fa-lg main-list-item-icon"></span>
+    <a href="https://twitter.com/lonecat">Twitter</a>
+  </li>
+  <li class="main-list-item">
     <span class="fa fa-building fa-lg main-list-item-icon"></span>
     <a href="https://koombea.com">My Workplace</a>
   </li>
