--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,5 +1,10 @@
 <h2>I am...</h2>
 <p>A software developer passionate about modern technologies and standards. I proudly work at <a href="https://koombea.com">Koombea</a>. I'm a cat-loving engineer and have many hobbies.</p>
+Jose Gomez is just another human on the web who happens to be Koombea’s Director of Operations.
+He is a passionate software developer engineer whose interests are in modern technologies and standards. One thing he is really proud of is being part of Koombea. Jose likes cats. 😸
+Some of his hobbies are building drones, DIY electronics, fixing stuff with software, gaming 🎮, engineering, and sporty cars 🚘. He’s a fan of automating and optimizing anything along his way because he loves seeing the positive results it can have.
+He is really passionate about complex problems and finding synergies with his education as an industrial engineer. His discipline allows him to learn new things easily using technology. 👨🏻‍💻
+Jose is continuously questioning the status quo of everything, always looking for smarter ways to work and help his team achieve its goals. 🙌🏻
 <h2>I like...</h2>
 <ul>
   <li>Drones (I like to build them)</li>
